Fix overflow bug with menu button

--- a/app/assets/stylesheets/core.scss
+++ b/app/assets/stylesheets/core.scss
@@ -125,7 +125,6 @@ table.nav { // Navigation table
     display: none;
     text-align: right;
     padding-left: 0;
-    padding-right: 0.2em;
   }
   td.items { // Navigation links container
     padding-left: 0.4em;
